fix: smaller padding on mobile

--- a/src/routes/FeedPage.css
+++ b/src/routes/FeedPage.css
@@ -1,7 +1,7 @@
 #root {
     flex: 1;
     display: grid;
-    padding: 1rem 5rem;
+    padding: 1rem 1rem;
     height: calc(100% - 2rem);
     grid-template-areas: "main";
     grid-template-rows: 100%;
